Update Tutorial - Basic use of the G-Eymol model.ipynb

--- a/Tutorial - Basic use of the G-Eymol model.ipynb
+++ b/Tutorial - Basic use of the G-Eymol model.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# G-Eymol\n",
-    "## Gevitational model of human visual scanpth\n",
+    "## Gravitational model of human visual scanpath\n",
     "See publication here: https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8730418\n",
     "\n",
     "\n",
