Update Tutorial - Basic use of the G-Eymol model.ipynb

--- a/Tutorial - Basic use of the G-Eymol model.ipynb
+++ b/Tutorial - Basic use of the G-Eymol model.ipynb
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List of fixation points ([pixel row, pixel column, intial time, final time]):\n",
+      "List of fixation points ([x-pixel, inverted-y-pixel, intial time, final time]):\n",
       "\n",
       " [[ 167.94642857  184.15178571   80.          440.        ]\n",
       " [ 120.80357143  213.61607143  520.          720.        ]\n",
