Update Tutorial - Basic use of the G-Eymol model.ipynb

--- a/Tutorial - Basic use of the G-Eymol model.ipynb
+++ b/Tutorial - Basic use of the G-Eymol model.ipynb
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "print(\"List of fixation points ([pixel row, pixel column, intial time, final time]):\\n\\n\", list_of_fixations)"
+    "print(\"List of fixation points ([x-pixel, inverted-y-pixel, intial time, final time]):\\n\\n\", list_of_fixations)"
    ]
   },
   {
